2012-05-18  Kirit Saelensminde  <kirit@felspar.com>
 Fixed a problem with deep copies of remote objects that was causing Django to throw errors when they were used in certain types of query.
 Added a number of attributes to the instance proxy that it will never have, so just throw an attribute error for them straight away. This cuts down on HTTP chatter, especially in tests.

2012-05-17  Kirit Saelensminde  <kirit@felspar.com>
 The create operation now resets the sequence numbers in case a primary key on an auto-increment field is specified.
 The user agent get function can now also be given status codes that it will accept as expected.
 The TTL on proxies is now set to two seconds. There are circumstances under which this might be unsafe. The user agent remains with a zero second TTL.

2012-05-16  Kirit Saelensminde  <kirit@felspar.com>
 The mock client instances can now be used in queries properly. Added some extra tests to make sure that normal remote instances, or their normalised URLs work as expected in queries.

2012-05-15  Kirit Saelensminde  <kirit@felspar.com>
 Fixed a problem where the create operation would always convert values to strings. This broke `null` values sent over the wire.
 Set a httplib2 option so that SSL certificates are not checked.

2012-05-14  Kirit Saelensminde  <kirit@felspar.com>
 Treat any request whose Content-Type starts with 'application/json' as JSON rather than look for an exact match.

2012-05-08  Kirit Saelensminde  <kirit@felspar.com>
 Altered the RemoteForeignKey field's get_prep_value so that it uses the super method of the same name instead of delegating to the get_db_prep_value method. This fixes a problem on Django 1.4 in queries.

2012-05-01  Kirit Saelensminde  <kirit@felspar.com>
 The internal (fake HTTP) requests will now prefer to send JSON to the client as it is a richer data format that the standard HTTP media types.

2012-04-29  Kirit Saelensminde  <kirit@felspar.com>