@@ -10,6 +10,7 @@ from slumber.connector.configuration import INSTANCE_PROXIES, MODEL_PROXIES
 from slumber.connector.dictobject import DictObject
 from slumber.connector.json import from_json_data
 from slumber.connector.ua import get, post
+from slumber.test import _MockClient
 
 
 def _ensure_absolute(url):
@@ -49,7 +50,14 @@ def get_instance_from_url(url):
     """Returns a local instance proxy for the object described by the
     absolute URL provided.
     """
-    return _InstanceProxy(url, None)
+    # This is a bit ugly, but we need to do proper proxy lookups for real use
+    # and the mock is a pain to do anything else with
+    from slumber import _client
+    if isinstance(_client, _MockClient):
+        return _InstanceProxy(url, None)
+    else:
+        _, json = get(url)
+        return get_instance_from_data(url, json)
 
 
 def get_instance_from_data(base_url, json):
@@ -160,9 +168,6 @@ class _InstanceProxy(object):
     def __unicode__(self):
         """Allow us to take the unicode name of the instance
         """
-        if not self._display:
-            instance = self._fetch_instance()
-            self._display = instance._display
         return self._display
 
 
