@@ -1,3 +1,6 @@
+2012-05-23  Kirit Saelensminde  <kirit@felspar.com>
+ Fixed a problem where client proxies weren't always being applied properly when instances were fetched out of the database. The current solution solves it by forcing a HTTP request, but there should be a better way of doing this.
+
 2012-05-18  Kirit Saelensminde  <kirit@felspar.com>
  Fixed a problem with deep copies of remote objects that was causing Django to throw errors when they were used in certain types of query.
  Added a number of attributes to the instance proxy that it will never have, so just throw an attribute error for them straight away. This cuts down on HTTP chatter, especially in tests.
